fixed bug causing kitchens to jump around

--- a/server/display/css/main.css
+++ b/server/display/css/main.css
@@ -141,7 +141,7 @@ h1 {
     color: #fff;
 
     margin: 7px;
-    border-radius: 15px;
+    border-radius: 81px;
     border: 2px solid #000;
     text-align: center;
 
